[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/interface/gui/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/icons/quest_icon.png" type="Texture" id=2]
[ext_resource path="res://src/interface/gui/QuestJournal.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/default_theme/montserrat_eb_48.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/default_theme/montserrat_eb_32.tres" type="DynamicFont" id=5]


[sub_resource type="Animation" id=1]

resource_name = "slide_in_quest_journal"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("QuestJournal:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.277392, 0.189465 ),
"update": 0,
"values": [ Vector2( 320, 1184 ), Vector2( 320, 224 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "slide_out_quest_journal"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("QuestJournal:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 2.07053, 0.133972 ),
"update": 0,
"values": [ Vector2( 320, 224 ), Vector2( 320, 1184 ) ]
}

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Container" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="QuestButton" type="TextureButton" parent="Container"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -192.0
margin_top = -184.0
margin_right = -64.0
margin_bottom = -56.0
texture_normal = ExtResource( 2 )

[node name="QuestJournal" type="Control" parent="Container"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = 644.0
margin_right = 640.0
margin_bottom = 1276.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Column" type="VBoxContainer" parent="Container/QuestJournal"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="Container/QuestJournal/Column"]
margin_right = 1280.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.321569 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_constants/shadow_as_outline = 0
text = "QUEST JOURNAL"
align = 1

[node name="Tree" type="Tree" parent="Container/QuestJournal/Column"]
margin_top = 64.0
margin_right = 1280.0
margin_bottom = 632.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/title_button_font = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Container"]
anims/slide_in_quest_journal = SubResource( 1 )
anims/slide_out_quest_journal = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Container/QuestButton" to="." method="_on_QuestButton_pressed"]
